tasks/gen/LuaParser.py
# Generated from Lua.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LuaParser ( Parser ):

    grammarFileName = "Lua.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'read'", "'('", "')'", "'print'", "','", 
                     "'return'", "'function'", "'end'", "'{'", "'}'", "'='", 
                     "'['", "']'", "'break'", "'continue'", "'if'", "'then'", 
                     "'elseif'", "'else'", "'for'", "'do'", "'repeat'", 
                     "'until'", "'while'", "'or'", "'and'", "'not'", "'<'", 
                     "'>'", "'<='", "'>='", "'=='", "'~='", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'true'", "'false'", "'nil'", 
                     "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NUMBER", "STRING", 
                      "NAME", "WS" ]

    RULE_prog = 0
    RULE_statement = 1
    RULE_readStmt = 2
    RULE_printStmt = 3
    RULE_argList = 4
    RULE_callFun = 5
    RULE_args = 6
    RULE_returnStmt = 7
    RULE_funStmt = 8
    RULE_params = 9
    RULE_block = 10
    RULE_table = 11
    RULE_tableEl = 12
    RULE_key = 13
    RULE_value = 14
    RULE_assign = 15
    RULE_breakStmt = 16
    RULE_continueStmt = 17
    RULE_ifStmt = 18
    RULE_forStmt = 19
    RULE_repeatStmt = 20
    RULE_whileStmt = 21
    RULE_expr = 22
    RULE_orExpr = 23
    RULE_andExpr = 24
    RULE_notExpr = 25
    RULE_comparison = 26
    RULE_addExpr = 27
    RULE_mulExpr = 28
    RULE_atom = 29

    ruleNames =  [ "prog", "statement", "readStmt", "printStmt", "argList", 
                   "callFun", "args", "returnStmt", "funStmt", "params", 
                   "block", "table", "tableEl", "key", "value", "assign", 
                   "breakStmt", "continueStmt", "ifStmt", "forStmt", "repeatStmt", 
                   "whileStmt", "expr", "orExpr", "andExpr", "notExpr", 
                   "comparison", "addExpr", "mulExpr", "atom" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    NUMBER=43
    STRING=44
    NAME=45
    WS=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LuaParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.StatementContext)
            else:
                return self.getTypedRuleContext(LuaParser.StatementContext,i)


        def getRuleIndex(self):
            return LuaParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = LuaParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 65455457944214) != 0):
                self.state = 60
                self.statement()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.match(LuaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(LuaParser.AssignContext,0)


        def expr(self):
            return self.getTypedRuleContext(LuaParser.ExprContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(LuaParser.ForStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(LuaParser.WhileStmtContext,0)


        def repeatStmt(self):
            return self.getTypedRuleContext(LuaParser.RepeatStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(LuaParser.IfStmtContext,0)


        def breakStmt(self):
            return self.getTypedRuleContext(LuaParser.BreakStmtContext,0)


        def continueStmt(self):
            return self.getTypedRuleContext(LuaParser.ContinueStmtContext,0)


        def funStmt(self):
            return self.getTypedRuleContext(LuaParser.FunStmtContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(LuaParser.PrintStmtContext,0)


        def readStmt(self):
            return self.getTypedRuleContext(LuaParser.ReadStmtContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = LuaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.assign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.expr()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 70
                self.forStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 71
                self.whileStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 72
                self.repeatStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 73
                self.ifStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 74
                self.breakStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 75
                self.continueStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 76
                self.funStmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 77
                self.printStmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 78
                self.readStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LuaParser.RULE_readStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadStmt" ):
                listener.enterReadStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadStmt" ):
                listener.exitReadStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReadStmt" ):
                return visitor.visitReadStmt(self)
            else:
                return visitor.visitChildren(self)




    def readStmt(self):

        localctx = LuaParser.ReadStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_readStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(LuaParser.T__0)
            self.state = 82
            self.match(LuaParser.T__1)
            self.state = 83
            self.match(LuaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argList(self):
            return self.getTypedRuleContext(LuaParser.ArgListContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_printStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStmt" ):
                listener.enterPrintStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStmt" ):
                listener.exitPrintStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStmt" ):
                return visitor.visitPrintStmt(self)
            else:
                return visitor.visitChildren(self)




    def printStmt(self):

        localctx = LuaParser.PrintStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_printStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(LuaParser.T__3)
            self.state = 86
            self.match(LuaParser.T__1)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 65455301591556) != 0):
                self.state = 87
                self.argList()


            self.state = 90
            self.match(LuaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.AtomContext)
            else:
                return self.getTypedRuleContext(LuaParser.AtomContext,i)


        def getRuleIndex(self):
            return LuaParser.RULE_argList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgList" ):
                listener.enterArgList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgList" ):
                listener.exitArgList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgList" ):
                return visitor.visitArgList(self)
            else:
                return visitor.visitChildren(self)




    def argList(self):

        localctx = LuaParser.ArgListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_argList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.atom()
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 93
                self.match(LuaParser.T__4)
                self.state = 94
                self.atom()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallFunContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)

        def args(self):
            return self.getTypedRuleContext(LuaParser.ArgsContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_callFun

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCallFun" ):
                listener.enterCallFun(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCallFun" ):
                listener.exitCallFun(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallFun" ):
                return visitor.visitCallFun(self)
            else:
                return visitor.visitChildren(self)




    def callFun(self):

        localctx = LuaParser.CallFunContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_callFun)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(LuaParser.NAME)
            self.state = 101
            self.match(LuaParser.T__1)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 65455435809284) != 0):
                self.state = 102
                self.args()


            self.state = 105
            self.match(LuaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.ExprContext)
            else:
                return self.getTypedRuleContext(LuaParser.ExprContext,i)


        def getRuleIndex(self):
            return LuaParser.RULE_args

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs" ):
                listener.enterArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgs" ):
                listener.exitArgs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgs" ):
                return visitor.visitArgs(self)
            else:
                return visitor.visitChildren(self)




    def args(self):

        localctx = LuaParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.expr()
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 108
                self.match(LuaParser.T__4)
                self.state = 109
                self.expr()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(LuaParser.ExprContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_returnStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)




    def returnStmt(self):

        localctx = LuaParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_returnStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(LuaParser.T__5)
            self.state = 116
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def params(self):
            return self.getTypedRuleContext(LuaParser.ParamsContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_funStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunStmt" ):
                listener.enterFunStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunStmt" ):
                listener.exitFunStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunStmt" ):
                return visitor.visitFunStmt(self)
            else:
                return visitor.visitChildren(self)




    def funStmt(self):

        localctx = LuaParser.FunStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(LuaParser.T__6)
            self.state = 119
            self.match(LuaParser.NAME)
            self.state = 120
            self.match(LuaParser.T__1)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==45:
                self.state = 121
                self.params()


            self.state = 124
            self.match(LuaParser.T__2)
            self.state = 125
            self.block()
            self.state = 126
            self.match(LuaParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(LuaParser.NAME)
            else:
                return self.getToken(LuaParser.NAME, i)

        def getRuleIndex(self):
            return LuaParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = LuaParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(LuaParser.NAME)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 129
                self.match(LuaParser.T__4)
                self.state = 130
                self.match(LuaParser.NAME)
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.StatementContext)
            else:
                return self.getTypedRuleContext(LuaParser.StatementContext,i)


        def returnStmt(self):
            return self.getTypedRuleContext(LuaParser.ReturnStmtContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = LuaParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 65455457944214) != 0):
                self.state = 136
                self.statement()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 142
                self.returnStmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tableEl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.TableElContext)
            else:
                return self.getTypedRuleContext(LuaParser.TableElContext,i)


        def getRuleIndex(self):
            return LuaParser.RULE_table

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTable" ):
                listener.enterTable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTable" ):
                listener.exitTable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTable" ):
                return visitor.visitTable(self)
            else:
                return visitor.visitChildren(self)




    def table(self):

        localctx = LuaParser.TableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_table)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(LuaParser.T__8)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 65455301595652) != 0):
                self.state = 146
                self.tableEl()
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==5:
                    self.state = 147
                    self.match(LuaParser.T__4)
                    self.state = 148
                    self.tableEl()
                    self.state = 153
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 156
            self.match(LuaParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableElContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def key(self):
            return self.getTypedRuleContext(LuaParser.KeyContext,0)


        def value(self):
            return self.getTypedRuleContext(LuaParser.ValueContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_tableEl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTableEl" ):
                listener.enterTableEl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTableEl" ):
                listener.exitTableEl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTableEl" ):
                return visitor.visitTableEl(self)
            else:
                return visitor.visitChildren(self)




    def tableEl(self):

        localctx = LuaParser.TableElContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_tableEl)
        try:
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.key()
                self.state = 159
                self.match(LuaParser.T__10)
                self.state = 160
                self.value()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.value()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KeyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(LuaParser.NUMBER, 0)

        def STRING(self):
            return self.getToken(LuaParser.STRING, 0)

        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)

        def table(self):
            return self.getTypedRuleContext(LuaParser.TableContext,0)


        def expr(self):
            return self.getTypedRuleContext(LuaParser.ExprContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_key

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKey" ):
                listener.enterKey(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKey" ):
                listener.exitKey(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKey" ):
                return visitor.visitKey(self)
            else:
                return visitor.visitChildren(self)




    def key(self):

        localctx = LuaParser.KeyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_key)
        try:
            self.state = 173
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [43]:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.match(LuaParser.NUMBER)
                pass
            elif token in [44]:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.match(LuaParser.STRING)
                pass
            elif token in [45]:
                self.enterOuterAlt(localctx, 3)
                self.state = 167
                self.match(LuaParser.NAME)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 4)
                self.state = 168
                self.table()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 5)
                self.state = 169
                self.match(LuaParser.T__11)
                self.state = 170
                self.expr()
                self.state = 171
                self.match(LuaParser.T__12)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(LuaParser.AtomContext,0)


        def table(self):
            return self.getTypedRuleContext(LuaParser.TableContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = LuaParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_value)
        try:
            self.state = 177
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 175
                self.atom()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                self.table()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)

        def expr(self):
            return self.getTypedRuleContext(LuaParser.ExprContext,0)


        def table(self):
            return self.getTypedRuleContext(LuaParser.TableContext,0)


        def readStmt(self):
            return self.getTypedRuleContext(LuaParser.ReadStmtContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)
